<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en"
    tools:ignore="MissingTranslation">
    <string name="pref_break_duration">"Break duration"</string>
    <string name="pref_disable_sound_and_vibration">"Disable sound and vibration"</string>
    <string name="pref_dnd">"Do not disturb mode"</string>
    <string name="pref_fullscreen">"Fullscreen mode"</string>
    <string name="pref_header_notifications">"Notifications"</string>
    <string name="pref_header_general">"General"</string>
    <string name="pref_keep_screen_on">"Keep the screen on"</string>
    <string name="pref_long_break_duration">"Long break duration"</string>
    <string name="pref_ringtone">"Finished work notification sound"</string>
    <string name="pref_ringtone_summary">"Set the notification sound"</string>
    <string name="pref_work_duration">"Work session duration"</string>
    <string name="pref_sessions_before_long_break">"Sessions before a long break"</string>
    <string name="pref_enable_long_break">"Enable long breaks"</string>
    <string name="pref_vibrate">"Vibration"</string>
    <string name="pref_vibration_type_none">None</string>
    <string name="pref_vibration_type_soft">Soft</string>
    <string name="pref_vibration_type_strong">Strong</string>
    <string name="pref_vibration_type_sos">SOS</string>
    <string name="pref_vibration_type_heartbeat">Heartbeat</string>
    <string name="pref_amoled">"Dark theme"</string>
    <string name="pref_header_during_work_sessions">During work sessions</string>
    <string name="pref_enable_ringtone">"Notification sound"</string>
    <string name="pref_priority_alarm">"Override sound profile"</string>
    <string name="pref_priority_alarm_summary">"The notification sound behaves like an alarm"</string>
    <string name="pref_ringtone_insistent">"Insistent notification"</string>
    <string name="pref_ringtone_insistent_summary">"Repeat the notification until it's cancelled"</string>
    <string name="pref_ringtone_break">Finished break notification sound</string>
    <string name="pref_auto_start_break">"Auto start break"</string>
    <string name="pref_auto_start_work">"Auto start work"</string>
    <string name="pref_auto_start_break_summary">Start the break after a work session without user interaction</string>
    <string name="pref_auto_start_work_summary">Start the work session after a break without user interaction</string>
    <string name="pref_disable_battery_optimization">Accurate notifications</string>

    <string name="pref_flashing_notification">Flash the screen</string>
    <string name="pref_flashing_notification_summary">A visual notification for silent environments</string>

    <string name="pref_disable_battery_optimization_summary">Disable battery optimization for this app</string>
    <string name="pref_screen_saver">Screensaver mode</string>
    <string name="pref_screen_saver_summary">Moves the timer while the screen is on</string>

    <string name="about">About</string>
    <string name="about_translate">Translate this app</string>
    <string name="about_open_source_licences">Open Source Licences</string>
    <string name="about_no_email">"There are no email clients installed."</string>
    <string name="about_rate_this_app">Rate this app</string>
    <string name="about_version">Version</string>
    <string name="about_source_code">Source code</string>
    <string name="about_app_intro">App intro</string>

    <string name="backup">Backup</string>
    <string name="backup_import_title">"Import backup"</string>
    <string name="backup_export_title">Export backup</string>
    <string name="backup_import_success">Import successful</string>
    <string name="backup_import_failed">Import failed</string>
    <string name="backup_export_CSV">Export CSV backup</string>
    <string name="backup_no_completed_sessions">There are no completed sessions</string>
    <string name="backup_import_message">"The current entries will be lost."</string>
    <string name="backup_file_can_be_imported_back">The file can be imported back</string>
    <string name="backup_file_cannot_be_imported_back">The file cannot be imported back</string>

    <string name="labels">Labels</string>
    <string name="label_current">Current label</string>
    <string name="label_name">Label name</string>
    <string name="label_already_exists">Label already exists</string>
    <string name="label_select_color">Select color</string>
    <string name="label_time">Pick daily time goal</string>
    <string name="label_delete_title">Delete label?</string>
    <string name="label_delete_message">Deleting this label will remove it from all finished sessions. The sessions will not be removed.</string>
    <string name="label_dialog_select">Select label</string>
    <string name="label_dialog_edit">Edit labels</string>
    <string name="label_add">Add label</string>
    <string name="label_all">all</string>

    <string name="action_stop">Stop</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_start_work">Start work</string>
    <string name="action_start_break">Start break</string>
    <string name="action_skip_break">Skip break</string>
    <string name="action_progress_work">Work session in progress</string>
    <string name="action_paused_title">Work session is paused</string>
    <string name="action_progress_break">Break in progress</string>
    <string name="action_continue">Continue?</string>
    <string name="action_finished_break">Break finished</string>
    <string name="action_finished_session">Session finished</string>
    <string name="action_press_back_button">Press the back button again to exit</string>

    <string name="tutorial_tap">Tap the timer to start and pause</string>
    <string name="tutorial_swipe_left">Swipe left or right to skip the current session</string>
    <string name="tutorial_swipe_up">Swipe up to add one more minute</string>
    <string name="tutorial_swipe_down">Swipe down on the timer to stop</string>
    <string name="tutorial_archive_label">You just archived a label. It will not be visible for selection or statistics.</string>

    <string name="intro_avoid_distractions">"Avoid distractions"</string>
    <string name="intro_avoid_distractions_description">"Keep your work on track using timed sessions handled by the app."</string>
    <string name="intro_clear_mind">"Clear your mind"</string>
    <string name="intro_clear_mind_description">"Reward yourself with short breaks and get refreshed."</string>
    <string name="intro_get_started">"Get started"</string>
    <string name="intro_get_started_description">"Stay focused, get rid of procrastination and improve your productivity."</string>

    <string name="dialog_close">Close</string>
    <string name="dialog_time">Goal Time</string>
    <string name="dialog_delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="upgrade">Upgrade</string>
    <string name="save">Save</string>
    <string name="select_all">Select all</string>
    <string name="add_session">Add session</string>>
    <string name="session_enter_valid_duration">Enter a valid duration</string>
    <string name="session_edit_session">Edit session</string>

    <string name="add_duration_minutes">Add duration (minutes)</string>
    <string name="feedback_title">Send feedback</string>
    <string name="settings_grant_permission">Click to grant permission</string>
    <string name="delete_selected_entries">Delete selected entries?</string>
    <string name="empty_state_no_items">No items</string>
    <string name="notification_channel_name">Goodtime Notifications</string>

    <string name="reminder_notification_channel_name">"Goodtime Reminder Notifications"</string>
    <string name="reminder_title">"Productivity reminder"</string>
    <string name="reminder_time">"Reminder time"</string>
    <string name="reminder_text">"It's time to be productive!"</string>

    <string name="settings">Settings</string>
    <string name="state">State</string>
    <string name="feedback">Feedback</string>
    <string name="toggle_view">Toggle view</string>

    <string name="statistics">Statistics</string>
    <string name="statistics_history">History</string>
    <string name="statistics_overview">Overview</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_week">Week</string>
    <string name="statistics_this_week">This week</string>
    <string name="statistics_this_month">This month</string>
    <string name="statistics_total">Total</string>
    <string name="statistics_productive_time">Productive time</string>
    <string name="statistics_pie_chart">Work distribution</string>

    <string name="spinner_stats_duration">Time</string>
    <string name="spinner_stats_nr_of_sessions">Sessions</string>

    <string name="spinner_range_hours">Hours</string>
    <string name="spinner_range_days">Days</string>
    <string name="spinner_range_weeks">Weeks</string>
    <string name="spinner_range_months">Months</string>

    <string name="update_pro_1">Colored labels to organize your work</string>
    <string name="update_pro_4">Manually add sessions</string>
    <string name="update_pro_5">Edit completed sessions</string>
    <string name="update_pro_6">Backup export and import</string>
    <string name="update_pro_7">Export statistics to CSV</string>
    <string name="update_pro_9">Themes</string>
    <string name="update_pro_10">Separate notification sound for work and break</string>
    <string name="update_pro_11">Insistent notifications</string>
    <string name="update_pro_12">One time payment</string>
    <string name="update_pro_13">All future features for free</string>
    <string name="update_pro_message">Upgrade to support open-source and ad-free software and enjoy some awesome features!</string>

    <string name="Profile">Profile</string>
    <string name="pref_profile_name">Profile name</string>
    <string name="profile_already_exists">Profile already exists</string>
    <string name="pref_save_custom_profile">Save custom time profile</string>
    <string name="pref_timer_duration">Timer duration</string>
    <string name="timer_durations">Set the duration for work and break sessions</string>

    <string name="pref_timer_style">Timer style</string>
    <string name="pref_timer_style_default">Default</string>
    <string name="pref_timer_style_classic">Classic</string>
    <string name="pref_timer_style_minutes">Minutes only</string>

    <string name="pref_session_counter">Sessions counter</string>
    <string name="pref_session_counter_summary">"Shows today's number of completed sessions"</string>

    <string name="support_the_developer">Support the developer</string>
    <string name="action_reset_counter">"This will reset today's finished sessions."</string>
    <string name="action_reset_counter_title">Reset?</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="other_apps">Other apps</string>
    <string name="unlabeled">unlabeled</string>
    <string name="pref_show_label">View current label</string>
    <string name="pref_show_label_summary">Shows the current label on the main screen</string>
    <string name="pref_one_minute_left_notification">Pre-notification</string>
    <string name="pref_one_minute_left_notification_summary">Notify one minute before a work session ends</string>
    <string name="donate_message">Donate to support open-source and ad-free software!</string>
    <string name="donate">Donate</string>
    <string name="message_premium">Enjoy the PRO version!</string>
    <string name="pref_work_day_start">Workday start</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="grant_permission_for_notifications">Grant permission for notifications</string>

</resources>
